Added feature current game detail